# apuestas_deportivas

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  calendario.py  docker-compose.aws.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run_models.py  skills-lock.json  soccerstats.py  sync_historical.py  tabla_posiciones.py  train_xgboost.py  ultimos_resultados.py
.github/workflows/: ci.yml  deploy.yml
application/: betplay_league_service.py  betplay_service.py  fbref_service.py  scheduler.py
application/betplay/: betplay_league_service.py  betplay_service.py
application/fbref/: fbref_service.py
application/football_data/: football_data_service.py
application/football_data_org/: h2h_service.py
application/lineup/: lineup_service.py
backups/: backup_geolocalizacion.sh
betplay/: betplay_detalle.py  betplay_scrapy.py  betplay_selenium.py
data/betplay/: betplay_data.py
data/fbref/: fbref_data.py
domain/: models.py
domain/betplay/: repositories.py
infrastructure/: api_client.py  config.py  logging_config.py
infrastructure/api_football/: api_football_client.py
infrastructure/betplay/: betplay_api_client.py  config.py
infrastructure/fbref/: fbref_data.py
infrastructure/football_data/: football_data_client.py
infrastructure/persistence/: leagues_config_repository.py  mongo_config.py  mongo_db_repository.py  mongo_repository.py  postgres_repository.py  schema.sql
infrastructure/telegram/: card_generator.py  telegram_notifier.py
models/poisson/: corners_model.py  data_loader.py  (+2 more)
scripts/: README.md  backup.sh  db-push.sh  db-tunnel.sh  deploy.sh  destroy.sh  lib.sh  logs.sh  start.sh  stop.sh
soccerstats/: soccerstats.py
tablas_estadistica/: estadistica.csv  estadistica_equipo.py  estadistica_main.py  fbref.py  marcadores_partidos.py  prueba.xlsx
terraform/: .gitignore  README.md  ec2.tf  ecr.tf  github_oidc.tf  iam.tf  main.tf  outputs.tf  rds.tf  security_groups.tf  ssm.tf  terraform.tfvars.example  variables.tf  vpc.tf
(+43 files in other folders)
