[project]
name = "apuestas-deportivas"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.133.1",
    "groq>=1.0.0",
    "lxml==5.3.1",
    "pandas==2.2.3",
    "pymongo==4.11.3",
    "python-dotenv>=1.2.1",
    "requests==2.32.3",
    "scikit-learn>=1.8.0",
    "seleniumbase>=4.39.2",
    "unidecode==1.3.8",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]
