[project]
name = "apuestas-deportivas"
version = "0.1.0"
description = "Sistema de detección de value bets y predicción de partidos."
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.133.1",
    "groq>=1.0.0",
    "lxml==5.3.1",
    "matplotlib>=3.9.0",
    "pandas==2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.1",
    "requests==2.32.3",
    "scikit-learn>=1.8.0",
    "seleniumbase>=4.39.2",
    "unidecode==1.3.8",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]

[project.scripts]
apuestas-api = "apuestas.entrypoints.api:main"
apuestas-train = "apuestas.entrypoints.train:main"
apuestas-sync = "apuestas.entrypoints.sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apuestas"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
